# homepage

./: .gitignore  Makefile  README.md  styles.css
.github/actions/: ansible
.github/actions/ansible/: Dockerfile  entrypoint.sh
.github/actions/build-generator/: Dockerfile  entrypoint.sh
.github/workflows/: a.yml  b.yml  build_dockers.yml  lint_ansible.yml  master_build_and_deploy.yml
a_folder/: some_file
ansible/: README.md  deploy.sh  generate_deploy_key.sh  inventory.ini  site.yml  ssh_key.txt.secret
ansible/group_vars/: webservers.yml
ansible/roles/webserver/files/etc/nginx/: nginx.conf
ansible/roles/webserver/files/etc/nginx/sites-available/: www.trial.com
ansible/roles/webserver/tasks/: main.yml
ansible/roles/webserver/vars/: main.yml
content/: index.html  server-one-liner.mu
content/notes/: ansible-synchronize-in-docker.html  ansible-synchronize-in-docker.mu  ansible-synchronize.mu  asyncio-gather.html  asyncio-gather.mu  hide-abstract-test-cases.mu  hspec.mu  http-methods.mu  insomnia.html  interface-tests.mu  nginx-site-config.html  nginx-site-config.mu  no-conditional-jobs-github-actions.html  rest-apis-vs-json-rpc.mu  unittest-cleanup.html
deploy/roles/webserver/tasks/: main.yml
deploy/roles/webserver/vars/: main.yml
dockers/ansible/: Dockerfile  ansible.dockerfile  build_docker_image.sh
dockers/ansible/scripts/: deploy.sh  entrypoint.sh  lint.sh
dockers/html-generator-builder/: build_docker_image.sh  html_generator_builder.dockerfile
dockers/html-generator-builder/scripts/: build.sh  clean.sh  entrypoint.sh  test.sh
dockers/markdown_parser_builder/: Dockerfile  build_docker_image.sh
dockers/markdown_parser_builder/scripts/: build.sh
generator/: generate.py  generate_homepage.py
generator/convert_markup/: CHANGELOG.md  build.sh  hs-blog.cabal
generator/convert_markup/app/: bla.hs
generator/convert_markup/src/HsBlog/: Markup.hs
generator/html_generator/: build.sh  hs-blog.cabal  html-generator.cabal
generator/html_generator/app/: Main.hs
generator/html_generator/src/: HsBlog.hs  HtmlGenerator.hs
generator/html_generator/src/HsBlog/: Convert.hs  Html.hs
generator/html_generator/src/HtmlGenerator/: Convert.hs  Html.hs  Markup.hs
generator/html_generator/test/: HtmlGeneratorSpec.hs
html-generator/: build.sh  hs-blog.cabal
html-generator/app/: Main.hs
html-generator/src/: HtmlGenerator.hs  SiteGenerator.hs
html-generator/src/Directory/: Directory.hs  Tree.hs  Write.hs
html-generator/src/HtmlGenerator/: Convert.hs  Html.hs  HtmlEscapedText.hs  Markup.hs  MarkupParsers.hs
html-generator/src/Markup/: Markup.hs  MarkupParsers.hs
html-generator/src/Site/: ParseSite.hs  RenderSite.hs  Site.hs  Title.hs
html-generator/test/: HtmlEscapedTextSpec.hs  HtmlGeneratorSpec.hs  MarkupParsersSpec.hs  ParseSiteSpec.hs  RenderSiteSpec.hs  SiteGeneratorSpec.hs  TitleSpec.hs
my-homepage/notes/: fizzbuzz.mu  github-actions-artifact-permissions.mu  immigration.mu  insomnia.mu  pytest-print-statements.mu  subprocess-call.mu  unittest-cleanup.mu
scripts/: generate_static.py
static/notes/: ansible-synchronize.html  static-sites-need-tls.html
