cabal-version:      2.4
name:               hs-blog
version:            0.1.0.0

synopsis: package to generate html from markup language

description: bla bla bla

author:             wpbindt
maintainer:         wesselbindt@gmail.com

common common-settings
    default-language: Haskell2010
    default-extensions: 
        OverloadedStrings
    ghc-options:
        -Wall

library
    import: common-settings
    exposed-modules: 
        HtmlGenerator
            HtmlGenerator.Convert
            HtmlGenerator.Html
            HtmlGenerator.HtmlEscapedText
        Directory.Directory
        Directory.Tree
        Directory.Write
        Markup.Markup
        Markup.MarkupParsers
        Site.Site
        Site.ParseSite
        Site.RenderSite
        Site.Title
        SiteGenerator
    build-depends:    
        base >=4.16.0.0
        , directory
        , filepath
        , text
        , attoparsec
    hs-source-dirs: src

executable html-generator
    import: common-settings
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base >=4.16.0.0
        , hs-blog
    ghc-options:
        -O

test-suite html-generator-test
    import: common-settings
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        base>=4.16.0.0
        , hspec>=2.7.4
        , text
        , hs-blog
    build-tool-depends:
        hspec-discover:hspec-discover
    other-modules:
        HtmlGeneratorSpec
        HtmlEscapedTextSpec
        MarkupParsersSpec
        ParseSiteSpec
        RenderSiteSpec
        SiteGeneratorSpec
        TitleSpec
