cabal-version:      2.4
name:               html-generator
version:            0.1.0.0

synopsis: package to generate html from markup language

author:             wpbindt
maintainer:         wesselbindt@gmail.com

common common-settings
    default-language: Haskell2010
    ghc-options:
        -Wall

library
    import: common-settings
    exposed-modules: 
        HsBlog
            HsBlog.Convert
            HsBlog.Html
            HsBlog.Markup
    build-depends:    
        base >=4.16.0.0
        , directory
        , filepath
    hs-source-dirs: src

executable html-generator
    import: common-settings
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base >=4.16.0.0
        , hmtl-generator
    ghc-options:
        -O
